[package]
name = "jetsocat"
version = "2024.2.2"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
edition = "2021"
description = "(Web)Socket toolkit for jet protocol related operations"
publish = false

[features]
default = ["rustls", "detect-proxy"]
detect-proxy = ["proxy_cfg"]
rustls = ["tokio-tungstenite/rustls-tls-native-roots"]
native-tls = ["tokio-tungstenite/native-tls"]

[dependencies]

# jet protocol support
jet-proto = { path = "../crates/jet-proto" }
uuid = "1.5"

# jmux protocol support
jmux-proto = { path = "../crates/jmux-proto" }
jmux-proxy = { path = "../crates/jmux-proxy" }

# proxy support
proxy-http = { path = "../crates/proxy-http" }
proxy-socks = { path = "../crates/proxy-socks" }
proxy-types = { path = "../crates/proxy-types" }
proxy_cfg = { version = "0.4", optional = true }

# cli
seahorse = "2.2"
humantime = "2.1"

# async
tokio = { version = "1.37", features = ["io-std", "io-util", "net", "fs", "time", "rt", "sync", "process", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
transport = { path = "../crates/transport" }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# error handling
anyhow = "1.0"

# location of special directories
dirs-next = "2.0"

# find parent process / watch process 
sysinfo = { version = "0.30", default-features = false }

[dev-dependencies]
test-utils = { path = "../crates/test-utils" }
tokio = { version = "1.37", features = ["time"] }
proptest = "1.3"
