[package]
name = "jetsocat"
version.workspace = true
authors = ["Devolutions Inc. <infos@devolutions.net>"]
edition = "2024"
description = "(Web)Socket toolkit for jet protocol related operations"
publish = false

[lints]
workspace = true

[features]
default = ["rustls", "detect-proxy"]
detect-proxy = ["proxy_cfg"]
rustls = ["tokio-tungstenite/rustls-tls-native-roots", "dep:rustls", "dep:rustls-native-certs"]
native-tls = ["tokio-tungstenite/native-tls", "dep:openssl", "dep:native-tls"]

[dependencies]

# jet protocol support
jet-proto = { path = "../crates/jet-proto" }
uuid = "1.17"

# jmux protocol support
jmux-proto = { path = "../crates/jmux-proto" }
jmux-proxy = { path = "../crates/jmux-proxy" }

# proxy support
proxy-http = { path = "../crates/proxy-http" }
proxy-socks = { path = "../crates/proxy-socks" }
proxy-types = { path = "../crates/proxy-types" }
proxy_cfg = { version = "0.4", optional = true }

# cli
seahorse = "2.2"
humantime = "2.2"

# async
tokio = { version = "1.45", features = ["io-std", "io-util", "net", "fs", "signal", "time", "rt", "sync", "process", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
transport = { path = "../crates/transport" }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# error handling
anyhow = "1.0"

# location of special directories
dirs-next = "2.0"

# find parent process / watch process 
sysinfo = { version = "0.35", default-features = false, features = ["system"] }

# doctor
tinyjson = "2.5" # Small JSON library; used to avoid including a bigger like serde-json
native-tls = { version = "0.2", optional = true } # Same dependency as tokio-tungstenite
rustls = { version = "0.23", optional = true, default-features = false, features = ["tls12", "std", "ring", "logging"] } # Same dependency as tokio-tungstenite
rustls-native-certs = { version = "0.8", optional = true } # Same dependency as tokio-tungstenite
openssl-probe = "0.1" # Same dependency as rustls-native-certs
rustls-pemfile = "2.2" # Same dependency as rustls-native-certs
base64 = "0.22" # Same dependency as rustls-pemfile

[target.'cfg(not(any(target_os = "windows", target_vendor = "apple")))'.dependencies]
# doctor
openssl = { version = "0.10", optional = true } # Same dependency as tokio-tungstenite/native-tls

# doctor
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = [
  "Win32_Security_Authentication_Identity",
  "Win32_Security_Cryptography",
  "Win32_Security_Credentials",
  "Win32_Globalization",
]

[dev-dependencies]
test-utils = { path = "../crates/test-utils" }
tokio = { version = "1.45", features = ["time"] }
proptest = "1.7"
