[package]
name = "jmux-proxy"
version = "0.1.0"
authors = ["Benoît CORTIER <benoit.cortier@fried-world.eu>"]
edition = "2021"
description = "JMUX proxy server implementation"

[dependencies]

# jmux
jmux-proto = { path = "../jmux-proto" }

# async
tokio = { version = "1.13.0", features = ["net", "rt", "io-util", "macros"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
futures-util = { version = "0.3.17", features = ["sink"] }

# error handling
anyhow = "1.0.45"

# logging
slog = "2.7.0"

# codec implementation
bytes = "1.1.0"
bitvec = "0.22.3"
