[package]
name = "picky-krb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picky-asn1-der = { path = "../../picky-rs/picky-asn1-der", version = "0.2.5" }
picky-asn1 = { path = "../../picky-rs/picky-asn1", version = "0.4.0" }
serde = { version = "1.0.130", features = ["derive"] }