[package]
name = "rdp-proto"
version = "0.1.0"
authors = ["Vlad Aleksashyn <vlad.al.dp@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.2.7"
bitflags = "1.0"
rand = "0.6"
chrono = "0.4"
md-5 = "0.8"
md4 = "0.8"
sha2 = "0.8"
hmac = "0.7"
crypto-mac = "0.7"
num-derive = "0.2"
num-traits = "0.2"
lazy_static = "1.2"
serde = "1.0"
serde_derive = "1.0"