[package]
name = "testsuite"
version = "0.0.0"
edition = "2024"
description = "Devolutions Gateway Rust test suite"
publish = false
autotests = false

[lib]
doctest = false
test = false

[[test]]
name = "integration_tests"
path = "tests/main.rs"
harness = true

[dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
dynosaur = "0.3"
escargot = "0.5"
expect-test = "1.5"
fastrand = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "process"] }

[dev-dependencies]
mcp-proxy.path = "../crates/mcp-proxy"
rstest = "0.25"
serde_json = "1"
sysevent.path = "../crates/sysevent"
tempfile = "3"
test-utils.path = "../crates/test-utils"

[target.'cfg(unix)'.dev-dependencies]
sysevent-syslog.path = "../crates/sysevent-syslog"

[target.'cfg(windows)'.dev-dependencies]
sysevent-winevent.path = "../crates/sysevent-winevent"

[lints]
workspace = true
