[package]
name = "testsuite"
version = "0.0.0"
edition = "2024"
description = "Devolutions Gateway Rust test suite"
publish = false
autotests = false

[lib]
doctest = false
test = false

[[test]]
name = "integration_tests"
path = "tests/main.rs"
harness = true

[dependencies]
anyhow = "1.0"
assert_cmd = "2.1"
dynosaur = "0.3"
escargot = "0.5"
expect-test = "1.5"
fastrand = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "process"] }
typed-builder = "0.21"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }

[dev-dependencies]
base64 = "0.22"
libsql = { version = "0.9", default-features = false, features = ["core"] }
mcp-proxy.path = "../crates/mcp-proxy"
rstest = "0.25"
serde_json = "1"
sysevent.path = "../crates/sysevent"
tempfile = "3"
test-utils.path = "../crates/test-utils"
tokio-rustls = { version = "0.26", features = ["ring"] }

[target.'cfg(unix)'.dev-dependencies]
sysevent-syslog.path = "../crates/sysevent-syslog"

[target.'cfg(windows)'.dev-dependencies]
sysevent-winevent.path = "../crates/sysevent-winevent"

[lints]
workspace = true
