[package]
name = "testsuite"
version = "0.0.0"
edition = "2024"
description = "Devolutions Gateway Rust test suite"
publish = false
autotests = false

[lib]
doctest = false
test = false

[[test]]
name = "integration_tests"
path = "tests/main.rs"
harness = true

[dependencies]
anyhow = "1.0"
assert_cmd = "2.2"
dynosaur = "0.3"
escargot = "0.5"
expect-test = "1.5"
fastrand = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "process"] }
tokio-util = "0.7"
typed-builder = "0.21"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }

[dev-dependencies]
agent-tunnel = { path = "../crates/agent-tunnel", features = ["test-utils"] }
agent-tunnel-proto = { path = "../crates/agent-tunnel-proto", features = ["serde"] }
devolutions-gateway-task = { path = "../crates/devolutions-gateway-task" }
base64 = "0.22"
camino = "1"
ipnetwork = "0.20"
libsql = { version = "0.9", default-features = false, features = ["core"] }
mcp-proxy.path = "../crates/mcp-proxy"
network-scanner = { path = "../crates/network-scanner", features = ["test-utils"] }
network-scanner-proto = { path = "../crates/network-scanner-proto" }
proxy-socks = { path = "../crates/proxy-socks" }
quinn = "0.11"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rstest = "0.25"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
serde_json = "1"
sysevent.path = "../crates/sysevent"
tempfile = "3"
test-utils.path = "../crates/test-utils"
tokio-rustls = { version = "0.26", features = ["ring"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dev-dependencies]
sysevent-syslog.path = "../crates/sysevent-syslog"

[target.'cfg(windows)'.dev-dependencies]
sysevent-winevent.path = "../crates/sysevent-winevent"

[lints]
workspace = true
