[package]
name = "agent-tunnel-proto"
version = "0.0.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
bincode = "1.3"
ipnetwork = "0.20"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["io-util"] }
uuid = { version = "1.17", features = ["v4", "serde"] }

[dev-dependencies]
proptest = "1.7"
tokio = { version = "1.45", features = ["rt", "macros"] }
