[package]
name = "agent-tunnel"
version = "0.0.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
# Internal crates
agent-tunnel-proto = { path = "../agent-tunnel-proto", features = ["serde"] }
devolutions-gateway-task = { path = "../devolutions-gateway-task" }

# Async / runtime
async-trait = "0.1"
tokio = { version = "1.45", features = ["sync", "io-util", "macros", "rt", "time"] }
parking_lot = "0.12"

# Errors / tracing
anyhow = "1"
tracing = "0.1"

# Data
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
camino = "1.1"
ipnetwork = "0.20"

# Crypto / PKI
picky = { version = "7.0.0-rc.15", default-features = false, features = ["x509", "time_conversion"] }
picky-asn1-x509 = "0.15"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pki-types = "1"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", default-features = false, features = ["std"] }

# QUIC
quinn = "0.11"
socket2 = "0.5"

[dev-dependencies]
base64 = "0.22"
tokio = { version = "1.45", features = ["macros"] }
