[package]
name = "devolutions-agent-shared"
version = "0.0.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "Shared code between the Devolutions Agent and the Devolutions Gateway"
edition = "2021"
publish = false


[dependencies]
camino = { version = "1.1" }
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"