[package]
name = "devolutions-agent-shared"
version = "0.0.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "Shared code between the Devolutions Agent and the Devolutions Gateway"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
camino = "1.1"
cfg-if = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.3"
# Required for `windows-registry` error type. (`Error` is not reexported from `windows-registry`).
windows-result = "0.2"
uuid = "1"

[dev-dependencies]
serde_json = "1"
