[package]
name = "devolutions-gateway-generators"
version = "0.0.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
edition = "2021"
publish = false

[dependencies]
devolutions-gateway = { path = "../../devolutions-gateway" }
proptest = "1.2.0"
uuid = "1.4.1"
serde = { version = "1.0.179", features = ["derive"] }
