[package]
name = "devolutions-gateway-generators"
version = "0.0.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
edition = "2021"
publish = false

[dependencies]
devolutions-gateway = { path = "../../devolutions-gateway" }
proptest = "1.5"
uuid = "1.10"
serde = { version = "1", features = ["derive"] }
