[package]
name = "devolutions-gateway-generators"
version = "0.0.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
edition = "2024"
publish = false

[dependencies]
devolutions-gateway = { path = "../../devolutions-gateway" }
proptest = "1.7"
uuid = "1.17"
serde = { version = "1", features = ["derive"] }
