[package]
name = "devolutions-gateway-task"
version = "0.0.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
edition = "2024"
publish = false

[lints]
workspace = true

[features]
default = []
named_tasks = ["tokio/tracing"]

[dependencies]
tokio = { version = "1.45", features = ["sync", "rt", "tracing"] }
async-trait = "0.1"
