[package]
name = "devolutions-pedm-contextmenu"
version = "0.1.0"
edition = "2021"

[dependencies]
devolutions-pedm-contextmenu-shell = { path = "./devolutions-pedm-contextmenu-shell" }

[build-dependencies]
devolutions-pedm-shared = { path = "../devolutions-pedm-shared", features = ["build"] }
fs_extra = "1.3.0"