[package]
name = "devolutions-pedm-hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
retour = "0.3.1"
win-api-wrappers = { path = "../win-api-wrappers" }
devolutions-pedm-shared = { path = "../devolutions-pedm-shared", features = ["pedm_client"] }
tracing = "0.1.40"
