[package]
name = "devolutions-pedm-shared"
version = "0.0.0"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "Shared code for Devolutions PEDM"
publish = false

[dependencies]
anyhow ={ version = "1.0.86", optional = true }
serde = { version = "1.0.209", features = ["derive"], optional = true }
win-api-wrappers = { path = "../win-api-wrappers", optional = true }
hyper = { version = "~1.4", features = ["client", "http1"], optional = true } # old version required for OpenAPI generator
serde_json = { version = "1.0.127", optional = true }
tokio = { version = "1.38.0", features = ["net", "sync"], optional = true }
glob = { version = "0.3.1", optional = true }
regex = { version = "1.10.6", optional = true }
schemars = { version = "0.8.21", optional = true }
windows-registry = { version = "0.2.0", optional = true }
devolutions-pedm-client-http = { path = "./devolutions-pedm-client-http", optional = true }
tower = { version = "0.4", optional = true } # old version required for OpenAPI generator
pin-project = { version = "1.1.5", optional = true }

[features]
pedm_client = ["hyper", "serde_json", "tokio", "win-api-wrappers", "policy", "serde", "devolutions-pedm-client-http", "tower", "pin-project", "anyhow"]
policy = ["regex", "schemars", "serde", "glob", "anyhow"]
build = []
desktop = ["windows-registry", "win-api-wrappers", "anyhow"]
