[package]
name = "devolutions-pedm-shell-ext"
version = "0.0.0"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "Devolutions PEDM Windows shell extension"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.42", features = ["sync"] }
windows-core = "0.58" # necessary because of macro resolving `windows::core`. Must match `win-api-wrappers` version.
devolutions-pedm-shared = { path = "../devolutions-pedm-shared", features = ["pedm_client", "desktop"] }
win-api-wrappers = { path = "../win-api-wrappers" }
parking_lot = "0.12"

[build-dependencies]
devolutions-pedm-shared = { path = "../devolutions-pedm-shared", features = ["build"] }
fs_extra = "1.3"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4"
