[package]
name = "devolutions-pedm"
version.workspace = true
edition = "2024"
license = "MIT/Apache-2.0"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "Devolutions Agent PEDM module"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "tracing", "tower-log", "form", "original-uri", "matched-path"] }
base16ct = { version = "0.2", features = ["std", "alloc"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
digest = "0.10"
hyper = { version = "1.6", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
schemars = { version = "1", features = ["chrono04"] }
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1.45", features = ["net", "rt-multi-thread"] }
tower-service = "0.3"
win-api-wrappers = { path = "../win-api-wrappers" }
devolutions-pedm-shared = { path = "../devolutions-pedm-shared", features = ["policy"]}
devolutions-gateway-task = { path = "../devolutions-gateway-task" }
devolutions-agent-shared = { path = "../devolutions-agent-shared" }
camino = { version = "1", features = ["serde1"] }
async-trait = "0.1"
tracing = "0.1"
aide = { version = "0.15", features = ["axum", "axum-extra", "axum-json", "axum-tokio"] }
tower-http = { version = "0.5", features = ["timeout"] }
parking_lot = "0.12"
cfg-if = "1.0"
uuid = "1"
dunce = "1.0"
tower = "0.5"
futures-util = "0.3"
libsql = { version = "0.9", optional = true, default-features = false, features = [ "core", "sync"] }
tokio-postgres = { version = "0.7", optional = true, features = ["with-chrono-0_4"] }
bb8 = { version = "0.9", optional = true }
bb8-postgres = { version = "0.9", optional = true }

[features]
default = ["libsql"]
libsql = ["dep:libsql"]
postgres = ["dep:tokio-postgres", "dep:bb8", "dep:bb8-postgres"]

[lints]
workspace = true
