[package]
name = "jet-proto"
version = "0.0.0"
edition = "2021"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
publish = false

[dependencies]
log = "0.4"
byteorder = "1.5"
uuid = { version = "1.10", features = ["v4"] }
httparse = "1.9"
http = "1.1"

[dev-dependencies]
lazy_static = "1.5"
bytes = "1.6"
sspi = "0.12"
ureq = { version = "2.10", features = ["json"] }
url = "2.5"
x509-parser = "0.16"
exitcode = "1.1"
tempfile = "3.10"
hex-literal = "0.4"
tokio-rustls = { version = "0.24", features = ["dangerous_configuration", "tls12"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
