[package]
name = "jet-proto"
version = "0.0.0"
edition = "2021"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
publish = false

[lints]
workspace = true

[dependencies]
log = "0.4"
byteorder = "1.5"
uuid = { version = "1.10", features = ["v4"] }
httparse = "1.9"
http = "1.1"

[dev-dependencies]
hex-literal = "0.4"
