[package]
name = "jet-proto"
version = "0.0.0"
edition = "2021"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
publish = false

[lints]
workspace = true

[dependencies]
log = "0.4"
byteorder = "1.5"
uuid = { version = "1.17", features = ["v4"] }
httparse = "1.10"
http = "1.3"

[dev-dependencies]
hex-literal = "1.0"
